# stock-market-data-set

./: AAPL.csv  Cargo.toml  MSFT.csv  data.ipynb  model.ipynb
nasdaq/: data.ipynb
src/: main.rs
yahoo/: data.ipynb
